--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "antd": "^4.18.4",
     "leaflet": "^1.7.1",
     "leaflet-routing-machine": "^3.2.12",
+    "leaflet.control.layers.tree": "^1.1.0",
     "proj4": "^2.9.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-leaflet": "^3.2.4",
     "react-leaflet-markercluster": "^3.0.0-rc1",
-    "react-scripts": "4.0.3"
+    "react-scripts": "4.0.3",
+    "shpjs": "^4.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -30,5 +32,8 @@
     ">0.2%",
     "not dead",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "@types/leaflet": "^1.9.6"
+  }
 }
